# github-portfolio-analyzer-ai

./: QUICK_RUN.md  QUICK_START.md  README.md  START_HERE.md  __init__.py  ai_scoring.py  app.py  config.py  data_extraction.py  database.py  integration_test.py  main.py  pyproject.toml  requirements.txt  routes.py  schemas.py  setup_unix.sh  setup_windows.bat  start_backend.bat  start_backend.sh  start_frontend.bat  start_frontend.sh  test_backend.py  utils.py
